--- a/exercise.html
+++ b/exercise.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/forms.css" />
     <link rel="stylesheet" href="./styles/search.css" />
     <link rel="stylesheet" href="./styles/register.css" />
+    <link rel="stylesheet" href="./styles/home.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
 
