--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
   </head>
 
   <body background="./images/home-background.jpg">
-    <script src="./scripts/form.js"></script>
-    <script src="./scripts/register.js"></script>
-    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <div>
       <nav id="navbar">
         <ul>
-          <li id="navbarList"><a id="navbarElm" href="index.html">About</a></li>
-          <li id="navbarList"><a id="navbarElm" href="food.html">Food</a></li>
-          <li id="navbarList"><a id="navbarElm" href="exercise.html">Exercise</a></li>
-          <li id="navbarList"><button id="navbarBtn" onclick="openLoginForm()">Log In</button></li>
-          <li id="navbarList"><button id="navbarBtn" onclick="openSignupForm()">Sign Up</button></li>
+          <li class="navbarList"><a class="navbarElm" href="index.html">About</a></li>
+          <li class="navbarList"><a class="navbarElm" href="food.html">Food</a></li>
+          <li class="navbarList"><a class="navbarElm" href="exercise.html">Exercise</a></li>
+          <li class="navbarList"><button id="navbarBtn" onclick="openLoginForm()">Log In</button></li>
+          <li class="navbarList"><button id="navbarBtn" onclick="openSignupForm()">Sign Up</button></li>
         </ul>
       </nav>
     </div>
@@ -174,5 +171,13 @@
       </form>
 
     </div>
+
+    
+    <script src="./scripts/form.js"></script>
+    <script src="./scripts/register.js"></script>
+    <script src="./scripts/home.js"></script>
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    </body>
     
 </html>
