--- a/home.html
+++ b/home.html
@@ -19,7 +19,16 @@
       <nav id="navbar">
         <ul>
           <li class="navbarList">
-            <a class="navbarElm" id="myhome" onclick="openMyHome()">MY Home</a>
+            <a
+              class="navbarElm"
+              id="myhome"
+              style="
+                background-color: rgb(82, 186, 151);
+                border: 2px solid white;
+              "
+              onclick="openMyHome()"
+              >MY Home</a
+            >
           </li>
           <li class="navbarList">
             <a class="navbarElm" id="food" onclick="openFood()">Food</a>
@@ -44,7 +53,6 @@
     <div class="second-navbar">
       <div class="myhome-navbar-element" id="myhome-home">Home</div>
       <div class="myhome-navbar-element" id="myhome-goals">Goals</div>
-      <div class="myhome-navbar-element" id="myhome-checkin">Check-In</div>
       <div class="myhome-navbar-element" id="myhome-profile">Profile</div>
 
       <div class="food-navbar-element" id="food-journal">Food Journal</div>
