added elements in home page

--- a/food.html
+++ b/food.html
@@ -51,7 +51,7 @@
           energy expenditure, and overall well-being.
         </p>
       </div>
-      <div id="login-form" class="wrapper">
+      <div id="login-form" class="wrapper" style="top: 70px">
         <form action="">
           <div class="exit-btn">
             <i class="bx bx-x" id="exit-btn" onclick="closeLoginForm()"></i>
@@ -90,7 +90,7 @@
         </form>
       </div>
 
-      <div id="signup-form" class="wrapper">
+      <div id="signup-form" class="wrapper" style="top: 70px">
         <form action="">
           <div class="exit-btn">
             <i class="bx bx-x" id="exit-btn" onclick="closeSignupForm()"></i>
