--- a/home.html
+++ b/home.html
@@ -68,6 +68,41 @@
       <div class="exercise-navbar-element" id="exercise-search">Search</div>
     </div>
 
+    <div class="myhome-home-summary">
+      <h2
+        style="font-size: 30px; position: absolute; transform: translate(70%)"
+      >
+        Your daily goals
+      </h2>
+      <br /><br />
+      <br /><br />
+      <div style="font-size: 25px; display: flex; margin-left: 20px">
+        Calories remaining:
+        <div class="calories" id="calories-remaining" style="margin-left: 20px">
+          XXXX
+        </div>
+      </div>
+      <br />
+      <button
+        type="submit"
+        class="add-button"
+        id="add-food-button"
+        onclick="AddFoodClick()"
+      >
+        Add Food
+      </button>
+      <br />
+      <br />
+      <button
+        type="submit"
+        class="add-button"
+        id="add-exercise-button"
+        onclick="AddExerciseClick()"
+      >
+        Add Exercise
+      </button>
+    </div>
+
     <script src="./scripts/form.js"></script>
     <script src="./scripts/register.js"></script>
     <script src="./scripts/home.js"></script>
