--- a/exercise.html
+++ b/exercise.html
@@ -52,7 +52,7 @@
         </p>
       </div>
 
-      <div id="login-form" class="wrapper">
+      <div id="login-form" class="wrapper" style="top: 70px">
         <form action="">
           <div class="exit-btn">
             <i class="bx bx-x" id="exit-btn" onclick="closeLoginForm()"></i>
@@ -91,7 +91,7 @@
         </form>
       </div>
 
-      <div id="signup-form" class="wrapper">
+      <div id="signup-form" class="wrapper" style="top: 70px">
         <form action="">
           <div class="exit-btn">
             <i class="bx bx-x" id="exit-btn" onclick="closeSignupForm()"></i>
