added elements in homepage 1

--- a/home.html
+++ b/home.html
@@ -38,6 +38,9 @@
               >Exercise</a
             >
           </li>
+          <li class="navbarList">
+            <a class="navbarElm" id="about" onclick="openAbout()">About</a>
+          </li>
           <li class="navbarList" id="username">
             <a id="navbarUser">USERNAME</a>
           </li>
@@ -66,6 +69,8 @@
         My Exercises
       </div>
       <div class="exercise-navbar-element" id="exercise-search">Search</div>
+
+      <div class="about-navbar-element">About FitSecret</div>
     </div>
 
     <div class="myhome-home-summary">
