--- a/food.html
+++ b/food.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="./styles/search.css" />
     <link rel="stylesheet" href="./styles/register.css" />
     <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./styles/goals.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
   </head>
 
-  <body background="./images/home-background.jpg">
+  <body background="./images/healthy-food-background.jpg">
     <div>
       <nav id="navbar">
         <ul>
