--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calorie Tracker</title>
+    <title>Calorie Tracker - Home</title>
     <link rel="icon" href="./images/Fit-Secret.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/forms.css" />
@@ -54,8 +54,16 @@
     </div>
 
     <div class="second-navbar">
-      <div class="myhome-navbar-element" id="myhome-home">Home</div>
-      <div class="myhome-navbar-element" id="myhome-goals">Goals</div>
+      <div class="myhome-navbar-element" id="myhome-home">
+        <a style="text-decoration: none; color: black" href="./home.html"
+          >Home</a
+        >
+      </div>
+      <div class="myhome-navbar-element" id="myhome-goals">
+        <a style="text-decoration: none; color: black" href="./goals.html"
+          >Goals</a
+        >
+      </div>
       <div class="myhome-navbar-element" id="myhome-profile">Profile</div>
 
       <div class="food-navbar-element" id="food-journal">Food Journal</div>
