--- a/exercise.html
+++ b/exercise.html
@@ -131,6 +131,7 @@
     <script src="./scripts/form.js"></script>
     <script src="./scripts/register.js"></script>
     <script src="./scripts/home.js"></script>
+    <script src="./scripts/calendar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </body>
 </html>
