added food-journal page and styling + blurred all containers

--- a/exercise.html
+++ b/exercise.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FitSecret Foods</title>
+    <title>Exercise - FitSecret</title>
     <link rel="icon" href="./images/Fit-Secret.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/forms.css" />
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="./styles/register.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/goals.css" />
+    <link rel="stylesheet" href="./styles/food-journal.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
   </head>
 
-  <body background="./images/home-background.jpg">
+  <body style="background-image: url(./images/home-background.jpg)">
     <div>
       <nav id="navbar">
         <ul>
@@ -43,8 +44,8 @@
       <i class="bx bx-search-alt-2" id="search-button"></i>
     </div>
 
-    <div class="food-container">
-      <div class="food-menu">
+    <div class="search-container">
+      <div class="exercise-menu">
         <img src="./images/sport-doodle-background.png" width="400px" />
         <h2>Add an Exercise</h2>
         <p style="margin-inline: 20px; margin-bottom: 10px; margin-top: 10px">
