--- a/food.html
+++ b/food.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FitSecret Foods</title>
+    <title>Food - FitSecret</title>
     <link rel="icon" href="./images/Fit-Secret.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/forms.css" />
@@ -9,13 +9,20 @@
     <link rel="stylesheet" href="./styles/register.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/goals.css" />
+    <link rel="stylesheet" href="./styles/food-journal.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
   </head>
 
-  <body background="./images/healthy-food-background.jpg">
+  <body
+    style="
+      background-image: url(./images/healthy-food-background.jpg);
+      background-size: cover;
+      background-position: center;
+    "
+  >
     <div>
       <nav id="navbar">
         <ul>
@@ -43,7 +50,7 @@
       <i class="bx bx-search-alt-2" id="search-button"></i>
     </div>
 
-    <div class="food-container">
+    <div class="search-container">
       <div class="food-menu">
         <img src="./images/food-doodle-background.png" width="400px" />
         <h2>Food Analysis</h2>
