--- a/goals.html
+++ b/goals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calorie Tracker - Goals</title>
+    <title>Goals - FitSecret</title>
     <link rel="icon" href="./images/Fit-Secret.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/forms.css" />
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="./styles/register.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/goals.css" />
+    <link rel="stylesheet" href="./styles/food-journal.css" />
+
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
   </head>
 
-  <body background="./images/home-background.jpg">
+  <body style="background-image: url(./images/home-background.jpg)">
     <div>
       <nav id="navbar">
         <ul>
@@ -61,13 +63,19 @@
         >
       </div>
       <div class="myhome-navbar-element" id="myhome-goals">
-        <a style="text-decoration: none; color: black" href="./goals.html"
+        <a style="text-decoration: none; color: gray" href="./goals.html"
           >Goals</a
         >
       </div>
       <div class="myhome-navbar-element" id="myhome-profile">Profile</div>
 
-      <div class="food-navbar-element" id="food-journal">Food Journal</div>
+      <div class="food-navbar-element" id="food-journal">
+        <a
+          style="text-decoration: none; color: black"
+          href="./food-journal.html"
+          >Food Journal</a
+        >
+      </div>
       <div class="food-navbar-element" id="food-foods">My Foods</div>
       <div class="food-navbar-element" id="food-search">Search</div>
 
