--- a/home.html
+++ b/home.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calorie Tracker - Home</title>
+    <title>Home - FitSecret</title>
     <link rel="icon" href="./images/Fit-Secret.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/forms.css" />
     <link rel="stylesheet" href="./styles/search.css" />
     <link rel="stylesheet" href="./styles/register.css" />
     <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./styles/goals.css" />
+    <link rel="stylesheet" href="./styles/food-journal.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
   </head>
 
-  <body background="./images/home-background.jpg">
+  <body style="background-image: url(./images/home-background.jpg)">
     <div>
       <nav id="navbar">
         <ul>
@@ -55,7 +57,7 @@
 
     <div class="second-navbar">
       <div class="myhome-navbar-element" id="myhome-home">
-        <a style="text-decoration: none; color: black" href="./home.html"
+        <a style="text-decoration: none; color: gray" href="./home.html"
           >Home</a
         >
       </div>
@@ -66,7 +68,13 @@
       </div>
       <div class="myhome-navbar-element" id="myhome-profile">Profile</div>
 
-      <div class="food-navbar-element" id="food-journal">Food Journal</div>
+      <div class="food-navbar-element" id="food-journal">
+        <a
+          style="text-decoration: none; color: black"
+          href="./food-journal.html"
+          >Food Journal</a
+        >
+      </div>
       <div class="food-navbar-element" id="food-foods">My Foods</div>
       <div class="food-navbar-element" id="food-search">Search</div>
 
@@ -209,7 +217,6 @@
     <script src="./scripts/form.js"></script>
     <script src="./scripts/register.js"></script>
     <script src="./scripts/home.js"></script>
-    <script src="./scripts/calendar.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </body>
 </html>
