--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <link rel="stylesheet" href="./styles/register.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/goals.css" />
+    <link rel="stylesheet" href="./styles/food-journal.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
 
-  <body background="./images/home-background.jpg">
+  <body
+  style="
+      background-image: url(./images/home-background.jpg);
+    ">
 
     <div>
       <nav id="navbar">
