--- a/home.html
+++ b/home.html
@@ -75,7 +75,11 @@
           >Food Journal</a
         >
       </div>
-      <div class="food-navbar-element" id="food-foods">My Foods</div>
+      <div class="food-navbar-element" id="food-foods">
+        <a href="./my-foods.html" style="text-decoration: none; color: black"
+          >My Foods</a
+        >
+      </div>
       <div class="food-navbar-element" id="food-search">Search</div>
 
       <div class="exercise-navbar-element" id="exercise-journal">
