--- a/home.html
+++ b/home.html
@@ -66,12 +66,9 @@
           >Goals</a
         >
       </div>
-      <div class="myhome-navbar-element" id="myhome-profile">Profile</div>
 
       <div class="food-navbar-element" id="food-journal">
-        <a
-          style="text-decoration: none; color: black"
-          href="./food-journal.html"
+        <a style="text-decoration: none; color: gray" href="./food-journal.html"
           >Food Journal</a
         >
       </div>
@@ -81,13 +78,20 @@
         >
       </div>
 
-      <div class="exercise-navbar-element" id="exercise-journal">
-        Exercise Journal
+      <div
+        class="exercise-navbar-element"
+        id="exercise-journal"
+        style="display: none; width: 250px"
+      >
+        <a
+          style="text-decoration: none; color: gray"
+          href="./exercise-journal.html"
+          >Exercise Journal</a
+        >
       </div>
       <div class="exercise-navbar-element" id="exercise-exercises">
         My Exercises
       </div>
-      <div class="exercise-navbar-element" id="exercise-search">Search</div>
 
       <div class="about-navbar-element">About FitSecret</div>
     </div>
