--- a/exercise-journal.html
+++ b/exercise-journal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Food Journal - FitSecret</title>
+    <title>Exercise Journal - FitSecret</title>
     <link rel="icon" href="./images/Fit-Secret.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/forms.css" />
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/goals.css" />
     <link rel="stylesheet" href="./styles/food-journal.css" />
+    <link rel="stylesheet" href="./styles/exercise-journal.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -30,19 +31,17 @@
             <a class="navbarElm" id="myhome" onclick="openMyHome()">MY Home</a>
           </li>
           <li class="navbarList">
+            <a class="navbarElm" id="food" onclick="openFood()">Food</a>
+          </li>
+          <li class="navbarList">
             <a
               class="navbarElm"
-              id="food"
-              onclick="openFood()"
+              id="exercise"
               style="
                 background-color: rgb(82, 186, 151);
                 border: 2px solid white;
               "
-              >Food</a
-            >
-          </li>
-          <li class="navbarList">
-            <a class="navbarElm" id="exercise" onclick="openExercise()"
+              onclick="openExercise()"
               >Exercise</a
             >
           </li>
@@ -77,12 +76,12 @@
         >
       </div>
 
-      <div class="food-navbar-element" id="food-journal" style="display: flex">
+      <div class="food-navbar-element" id="food-journal" style="display: none">
         <a style="text-decoration: none; color: gray" href="./food-journal.html"
           >Food Journal</a
         >
       </div>
-      <div class="food-navbar-element" id="food-foods" style="display: flex">
+      <div class="food-navbar-element" id="food-foods" style="display: none">
         <a href="./my-foods.html" style="text-decoration: none; color: black"
           >My Foods</a
         >
@@ -91,25 +90,37 @@
       <div
         class="exercise-navbar-element"
         id="exercise-journal"
-        style="display: none; width: 250px"
+        style="display: flex; width: 250px"
       >
         <a
-          style="text-decoration: none; color: gray"
           href="./exercise-journal.html"
+          style="text-decoration: none; color: gray"
           >Exercise Journal</a
         >
       </div>
-      <div class="exercise-navbar-element" id="exercise-exercises">
-        My Exercises
+      <div
+        class="exercise-navbar-element"
+        id="exercise-exercises"
+        style="display: flex"
+      >
+        <a
+          href="./my-exercises.html"
+          style="text-decoration: none; color: black"
+          >My Exercises</a
+        >
       </div>
-
-      <div class="about-navbar-element">About FitSecret</div>
+      <div
+        class="about-navbar-element"
+        style="text-decoration: none; color: black"
+      >
+        About FitSecret
+      </div>
     </div>
 
-    <div class="food-journal-container">
+    <div class="exercise-journal-container">
       <div class="journal-calendar">
-        <p style="font-size: 25px; margin-right: 30px; margin-left: 15px">
-          Your food journal for:
+        <p style="font-size: 22px; margin-right: 30px; margin-left: 15px">
+          Your exercise journal for:
         </p>
         <div class="calendar" style="display: flex">
           <div>
@@ -145,82 +156,73 @@
           </div>
         </div>
       </div>
-
-      <div class="meal-container">
+      <div class="exercise-container">
         <div style="width: 100%">
-          <table class="meal-table">
+          <table class="exercise-table">
+            <thead>
+              <tr>
+                <td class="first alt">Exercise</td>
+                <td class="alt">Minutes</td>
+                <td class="alt">Calories Burnned</td>
+              </tr>
+            </thead>
             <tbody>
-              <tr class="meal-header">
-                <td class="first alt">Breakfast</td>
-                <td class="alt nutrient-column">
-                  Calories
-                  <div class="subtitle">kcal</div>
-                </td>
-                <td class="alt nutrient-column">
-                  Carbs
-                  <div class="subtitle">g</div>
-                </td>
-                <td class="alt nutrient-column">
-                  Protein
-                  <div class="subtitle">g</div>
-                </td>
-                <td class="alt nutrient-column">
-                  Fat
-                  <div class="subtitle">g</div>
-                </td>
-              </tr>
-
               <tr class="bottom">
-                <td class="first alt">
-                  <a class="add-food" href="#">Add Food</a>
+                <td class="first">
+                  <a class="add-exercise" href="">Add Exercise</a>
                 </td>
-                <td>&nbsp;total1</td>
-                <td>&nbsp;total1</td>
-                <td>&nbsp;total1</td>
-                <td>&nbsp;total1</td>
-                <td class="delete"></td>
-              </tr>
-              <tr class="meal-header">
-                <td class="first alt">Lunch</td>
-              </tr>
-              <tr class="bottom">
-                <td class="first alt">
-                  <a class="add-food" href="#">Add Food</a>
-                </td>
-                <td>&nbsp;total2</td>
-                <td>&nbsp;total2</td>
-                <td>&nbsp;total2</td>
-                <td>&nbsp;total2</td>
-                <td class="delete"></td>
-              </tr>
-              <tr class="meal-header">
-                <td class="first alt">Dinner</td>
-              </tr>
-              <tr class="bottom">
-                <td class="first alt">
-                  <a class="add-food" href="#">Add Food</a>
-                </td>
-                <td>&nbsp;total3</td>
-                <td>&nbsp;total3</td>
-                <td>&nbsp;total3</td>
-                <td>&nbsp;total3</td>
-                <td class="delete"></td>
-              </tr>
-              <tr class="meal-header">
-                <td class="first alt">Snacks</td>
-              </tr>
-
-              <tr class="bottom">
-                <td class="first alt">
-                  <a class="add-food" href="#">Add Food</a>
-                </td>
-                <td>&nbsp;total4</td>
-                <td>&nbsp;total4</td>
-                <td>&nbsp;total4</td>
-                <td>&nbsp;total4</td>
+                <td></td>
+                <td></td>
                 <td class="delete"></td>
               </tr>
             </tbody>
+            <tfoot>
+              <tr class="spacer">
+                <td class="first" colspan="3">&nbsp;</td>
+                <td class="empty">&nbsp;</td>
+              </tr>
+
+              <tr>
+                <td class="first">
+                  <span class="soFar"> Daily Total / </span>
+                  <span class="goal"> Goal </span>
+                </td>
+
+                <td>
+                  <span class="soFar"> 0 </span>
+                  /
+                  <span class="goal"> 0 </span>
+                </td>
+                <td>
+                  <span class="soFar"> 0 </span>
+                  /
+                  <span class="goal"> 0 </span>
+                </td>
+
+                <td class="empty">&nbsp;</td>
+              </tr>
+
+              <tr>
+                <td class="first">
+                  <span class="soFar"> Weekly Total / </span>
+                  <span class="goal"> Goal </span>
+                </td>
+
+                <td>
+                  <span class="soFar"> 0 </span>
+                  /
+                  <span class="goal"> 0 </span>
+                </td>
+
+                <td>
+                  <span class="soFar"> 0 </span>
+                  /
+                  <span class="goal"> 0 </span>
+                </td>
+
+                <td class="empty">&nbsp;</td>
+              </tr>
+            </tfoot>
           </table>
         </div>
       </div>
